--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="row g-5">
           <div class="col-md-6">
-            <h2><button onclick="about"></button> #whoami</h2>
+            <h2><button onclick="whoami"></button> #whoami</h2>
             <p>Web developer</p>
             <ul class="icon-list">
               <li>Django</li>
