--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       </header>
       <main>
         <!-- <hr class="col-3 col-md-2 mb-5"> -->
+        <h2>Johnson Bidura</h2>
+        <p>Tech enthusiast. Software developer and cyber security researcher. </p>
 
         <div class="row g-5">
           <div class="col-md-6">
-            <h2><button onclick="whoami"></button> #whoami</h2>
-            <p>Web developer</p>
+            <h2>#whoami</h2>
+            <div>Web developer</div>
             <ul class="icon-list">
               <li>Django</li>
               <li>React</li>
