--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
         <div class="row g-5">
           <div class="col-md-6">
             <h2>#whoami</h2>
-            <div>Web developer</div>
+            <div>Web development</div>
             <ul class="icon-list">
               <li>Django</li>
               <li>React</li>
               <li>Ruby on Rails</li>
+            </ul>
+            <div>Cyber Sec</div>
+            <ul class="icon-list">
+              <li>Web API security</li>
+              <li>Social Engineering</li>
             </ul>
           </div>
 
