--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
 
           <div class="col-md-6">
-            <h2>Contacts</h2>
+            <h2>Connects</h2>
             <p></p>
             <ul class="icon-list">
               <li><a href="https://ke.linkedin.com/johnson-bidura-2a8317107">linkedin</a></li>
